[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "fra_amtrak"
version = "0.1.0"
description = "Amtrak station performance analysis"
authors = [
  { name = "root" },
]

readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    
]
requires-python = ">=3.12"

dependencies = [
    "altair>=5.4.1",
    "ipykernel>=6.29.5",
    "numpy>=2.1.3",
    "openpyxl>=3.1.5",
    "pandas>=2.2.3",
    "scipy>=1.14.1",
    "watermark>=2.5.0",
]

[tool.black]
line-length = 99
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.venv
)/
'''

[tool.isort]
profile = "black"
known_first_party = ["fra_amtrak"]
force_sort_within_sections = true


